# amartyne

CLionProjects/ft_printf/: CMakeLists.txt  Makefile  Makefile~  extra_fun.c  ft_itoa_base.c  ft_printf  ft_printf.c  ft_printf.h  ft_putunsnbr.c  main.c  number.c  unicode.c
CLionProjects/ft_printf1/: Makefile  Makefile~  a.out  extra_fun.c  find_flag.c  for_flags.c  ft_itoa_base.c  ft_itoa_base_int.c  ft_itoa_unslong.c  ft_memset.c  ft_printf.h  ft_putint.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_putstring.c  ft_putunsnbr.c  if_flags.c  main.c  not_spec.c  (+3 more)
Checkers/: main.c  test_libft.c
ft_printf1/: CMakeLists.txt  Makefile  a.out  extra_fun.c  find_flag.c  for_add.c  for_flags.c  for_p.c  ft_arrfree.c  ft_itoa_base.c  ft_itoa_base_int.c  ft_itoa_max.c  ft_itoa_unslong.c  ft_printf.c  ft_printf.h  ft_putint.c  ft_putnumber.c  ft_putstring.c  ft_putunsnbr.c  ft_strlen.c  if_flags.c  main.c  not_spec.c  number.c  specifier.c  unicode.c  valid.c
ft_printf2/: CMakeLists.txt  Makefile  extra_fun.c  find_flag.c  for_flags.c  ft_itoa_base.c  ft_printf  ft_printf.c  ft_printf.h  ft_putunsnbr.c  main.c  number.c  unicode.c
ft_printf_last/: Makefile  extra_fun.c  find_flag.c  for_flags.c  ft_itoa_base.c  ft_printf  ft_printf.c  ft_printf.h  ft_putnumber.c  ft_putstring.c  ft_putunsnbr.c  if_flags.c  main.c  number.c  specifier.c  unicode.c
ft_printf_norme/: Makefile  a.out  find_flag.c  ft_printf.c  ft_printf.h  ft_putint.c  ft_putnumber.c  ft_putunsnbr.c  if_flags.c  main.c  not_spec.c  number.c  specifier.c
gnl/: get_next_line.h
libft/: a.out  ft_strchr.c~
(+45 files in other folders)
